# cv-warlock

./: .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  OPTIMIZATION_PLAN.md  README.md  pyproject.toml
.claude/: settings.local.json
.claude/agents/: i18n.md  responsive.md  wyr.md
.claude/commands/: tavily-best-practices.md
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  coverage.yml  e2e.yml  lint.yml  test.yml  typecheck.yml
.streamlit/: config.toml
app/: __init__.py  app.py  run.py
app/components/: cv_input.py  job_input.py  md_to_pdf.py  result_display.py
app/utils/: __init__.py  linkedin_fetcher.py  pdf_generator.py  pdf_parser.py  styles.py
assets/: cv-warlock-open-graph.psd
docs/: COVER_LETTER_BEST_PRACTICE.md  CV_BEST_PRACTICE.md  RLM_INTEGRATION.md  SCORING.md
examples/: sample_cv.md  sample_job_posting.md
favicon-pack/: README.md  site.webmanifest
scripts/: test_api_keys.py
src/cv_warlock/: __init__.py  config.py  main.py
src/cv_warlock/extractors/: __init__.py  cv_extractor.py  job_extractor.py
src/cv_warlock/graph/: __init__.py  edges.py  nodes.py  rlm_nodes.py  workflow.py
src/cv_warlock/llm/: __init__.py  anthropic.py  base.py  google.py  openai.py  rlm_provider.py
src/cv_warlock/models/: __init__.py  cv.py  job_spec.py  reasoning.py  state.py
src/cv_warlock/output/: __init__.py  markdown.py
src/cv_warlock/processors/: __init__.py  cover_letter.py  matcher.py  tailor.py
src/cv_warlock/prompts/: __init__.py  cover_letter.py  extraction.py  generation.py  matching.py  reasoning.py
src/cv_warlock/rlm/: __init__.py  chunking.py  environment.py  models.py  orchestrator.py  prompts.py
src/cv_warlock/scoring/: __init__.py  algorithmic.py  hybrid.py  models.py
src/cv_warlock/utils/: __init__.py  date_utils.py
tests/: __init__.py  conftest.py  test_config.py  test_date_utils.py  test_e2e_workflow.py  test_edges.py  test_extractors.py  test_llm_providers.py  test_matcher.py  test_models_cv.py  test_models_job.py  test_models_state.py  test_nodes.py  test_output.py  test_pdf_generator.py  test_rlm.py  test_rlm_comprehensive.py  test_scoring_algorithmic.py  test_scoring_hybrid.py  test_scoring_models.py  test_tailor.py  test_workflow.py
