[project]
name = "cv-warlock"
version = "0.9.0"
description = "Job-tailored AI CV creator using LangChain and LangGraph"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "Peter W. Szabo", email = "peter@kaizen-ux.com" }]
keywords = ["cv", "resume", "ai", "langchain", "langgraph", "tailoring"]

dependencies = [
    # LangChain core
    "langchain>=0.3.0",
    "langgraph>=0.2.0",

    # LLM providers (all supported)
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=2.0.0",

    # Data & config
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",

    # CLI
    "typer>=0.12.0",
    "rich>=13.0.0",

    # Web UI
    "streamlit>=1.40.0",

    # PDF parsing (for CV upload)
    "pymupdf>=1.24.0",

    # Tracing & observability
    "langsmith>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.scripts]
cv-warlock = "cv_warlock.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cv_warlock"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
