[project]
name = "cv-warlock"
version = "0.9.0"
description = "Job-tailored AI CV creator using LangChain and LangGraph"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "Peter W. Szabo", email = "peter@kaizen-ux.com" }]
keywords = ["cv", "resume", "ai", "langchain", "langgraph", "tailoring"]

dependencies = [
    # LangChain core
    "langchain>=0.3.0",
    "langgraph>=0.2.0",

    # LLM providers (all supported)
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=2.0.0",

    # Data & config
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",

    # CLI
    "typer>=0.12.0",
    "rich>=13.0.0",

    # Web UI
    "streamlit>=1.40.0",

    # PDF parsing (for CV upload)
    "pymupdf>=1.24.0",

    # PDF generation (for CV export)
    "fpdf2>=2.8.0",

    # Tracing & observability
    "langsmith>=0.2.0",

    # HTTP/2 support for better connection reliability
    "h2>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.scripts]
cv-warlock = "cv_warlock.main:app"
warlock-streamlit = "app.run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cv_warlock", "app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]  # Line too long - disabled for prompt strings and long HTML

[tool.mypy]
python_version = "3.11"
# strict = true  # TODO: Re-enable after fixing type annotations
warn_return_any = false
warn_unused_ignores = false
disallow_untyped_defs = false
check_untyped_defs = false
ignore_missing_imports = true

# Ignore errors in files with known LangChain type issues
# TODO: Fix these type annotations incrementally
[[tool.mypy.overrides]]
module = [
    "cv_warlock.llm.*",
    "cv_warlock.extractors.*",
    "cv_warlock.processors.*",
    "cv_warlock.scoring.*",
    "cv_warlock.graph.*",
    "cv_warlock.output.*",
    "cv_warlock.main",
]
ignore_errors = true

[tool.coverage.run]
source = ["src/cv_warlock"]
omit = [
    # LLM-heavy modules where logic lives in prompts, not testable Python code
    "src/cv_warlock/processors/*",
    # CLI entry point - tested via integration tests, not unit tests
    "src/cv_warlock/main.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
